# pysec

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  manage.py  pyproject.toml  setup.py
.github/workflows/: github-ci.yaml
docs/: SETUP_GUIDE.md  specs.yml
pysec/: __init__.py  __main__.py  audit_config.py  audit_packages.py  cli.py  client.py  config.py  cve.py  cve_manager.py  osbase.py
pysec/cli/: __init__.py  audit_config.py  audit_packages.py  client_cli.py  main.py  server.py
pysec/oschecks/: __init__.py  linux_arch.py  linux_ubuntu.py  mac.py  ubuntu.py  windows.py
pysec/package_repositories/: __init__.py  _apt.py  _docker.py  _python.py  base.py  homebrew.py  pacman.py  snap.py  utils.py
pysec/server/: __init__.py  admin.py  app.py  apps.py  auth.py  authentication.py  choices.py  database.py  models.py  serializers.py  spectacular_extensions.py  urls.py  views.py
pysec/server/management/: __init__.py
pysec/server/management/commands/: create_client.py  start_server.py
pysec/server/migrations/: 0001_initial.py  0002_auto_20250706_0724.py  0002_package_package_repository.py  0003_alter_auditlog_options_alter_package_options_and_more.py  0003_alter_package_package_repository.py
pysec/server/templates/: client_detail.html  dashboard.html  login.html
pysec/server/templates/server/: client_detail.html  dashboard.html  login.html
pysec_django/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_server.py  test_migrations.py  test_package_repositories.py  test_serializers.py  test_server_client.py  test_settings.py
